--- a/junit-jupiter-starter-maven/pom.xml
+++ b/junit-jupiter-starter-maven/pom.xml
@@ -30,6 +30,12 @@
 			<artifactId>junit-jupiter</artifactId>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest</artifactId>
+            <version>3.0</version>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 
 	<build>
